# app/services/api.services.go
@@ -81,6 +81,7 @@ func CreateUser(c *fiber.Ctx) error {
 // @Success 200 {string} string
 // @Failure 400 {object} utils.HTTPError
 // @Failure 401 {string} string
+// @Failure 409 {object} utils.HTTPError
 // @Router /users [delete]
 func DeleteUser(c *fiber.Ctx) error {
 	if err := dal.DeleteUser(c.Locals("username")).Error; err != nil {
@@ -88,15 +89,15 @@ func DeleteUser(c *fiber.Ctx) error {
 		return err
 	}
 	return nil
-
 }
 
 // @Summary Change the current users setting
-// @Description Change the current users setting
+// @Description Change the current users setting. The request body must contain either a new name or a new password. If both, the username and the password get changed.
 // @Security BasicAuth
 // @Tags users
 // @Accept  json
 // @Produce  json
+// @Param user body types.AddUser true "Userupdate"
 // @Success 200 {string} string
 // @Failure 400 {object} utils.HTTPError
 // @Failure 401 {string} string
@@ -113,13 +114,46 @@ func UpdateUser(c *fiber.Ctx) error {
 			utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
 			return err
 		}
-	}
+	} else if len(userUpdate.Name) > 0 && len(userUpdate.Password) == 0 {
 
-	/* if err := dal.DeleteUser(c.Locals("username")).Error; err != nil {
-		utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
-		return err
-	} */
-	return c.JSON(userUpdate)
+		result := dal.FindUserByName(&dal.User{}, userUpdate.Name)
+		if !errors.Is(result.Error, gorm.ErrRecordNotFound) {
+			if result.RowsAffected > 0 {
+				utils.NewHTTPError(c, fiber.StatusConflict, fmt.Errorf("user %s already exists", userUpdate.Name))
+				return result.Error
+			} else {
+				utils.NewHTTPError(c, fiber.StatusInternalServerError, result.Error)
+				return result.Error
+			}
+		}
+
+		username := fmt.Sprint(c.Locals("username"))
+		if err := dal.ChangeUserName(username, userUpdate.Name).Error; err != nil {
+			utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
+			return err
+		}
+	} else if len(userUpdate.Name) > 0 && len(userUpdate.Password) > 0 {
+		result := dal.FindUserByName(&dal.User{}, userUpdate.Name)
+		if !errors.Is(result.Error, gorm.ErrRecordNotFound) {
+			if result.RowsAffected > 0 {
+				utils.NewHTTPError(c, fiber.StatusConflict, fmt.Errorf("user %s already exists", userUpdate.Name))
+				return result.Error
+			} else {
+				utils.NewHTTPError(c, fiber.StatusInternalServerError, result.Error)
+				return result.Error
+			}
+		}
+
+		username := fmt.Sprint(c.Locals("username"))
+		if err := dal.ChangeUserAndPassword(username, userUpdate.Name, userUpdate.Password).Error; err != nil {
+			utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
+			return err
+		}
+	} else {
+		utils.NewHTTPError(c, fiber.StatusNotAcceptable, fmt.Errorf("no name or password specified"))
+		return nil
+	}
+	return nil
 
 }
 
@@ -135,7 +169,16 @@ func UpdateUser(c *fiber.Ctx) error {
 // @Failure 404 {object} utils.HTTPError
 // @Router /strategies [get]
 func GetStrategies(c *fiber.Ctx) error {
-	result := dal.FindAllStrategiesFromUser(nil, c.Locals("username"))
+
+	// get user id
+	username := fmt.Sprint(c.Locals("username"))
+	user := &dal.User{Name: username}
+	if err := dal.FindUserByName(user, username).Error; err != nil {
+		utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
+		return nil
+	}
+
+	result := dal.FindAllStrategiesFromUser(nil, user.ID)
 	if result.Error != nil {
 		utils.NewHTTPError(c, fiber.StatusInternalServerError, result.Error)
 		return nil
@@ -157,6 +200,7 @@ func GetStrategies(c *fiber.Ctx) error {
 		tps := &types.TP{}
 		sl := &types.SL{}
 		err := rows.Scan(&tmpStrategy.ID, &tmpStrategy.AllowCounter, &entries.Diff, &tps.Diff, &sl.Diff)
+		fmt.Println(tmpStrategy)
 		if err != nil {
 			utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
 			return nil
@@ -174,7 +218,7 @@ func GetStrategies(c *fiber.Ctx) error {
 		strategies[indx].TPs = append(strategies[indx].TPs, tps)
 	}
 	if len(strategies) == 0 {
-		utils.NewHTTPError(c, fiber.StatusNotFound, fmt.Errorf("user %s has strategies", c.Locals("username")))
+		utils.NewHTTPError(c, fiber.StatusNotFound, fmt.Errorf("user %s has no strategies", c.Locals("username")))
 		return nil
 	}
 	return c.JSON(strategies)
@@ -192,21 +236,33 @@ func GetStrategies(c *fiber.Ctx) error {
 // @Failure 401 {string} string
 // @Router /strategies [post]
 func CreateStrategy(c *fiber.Ctx) error {
-	var s dal.Strategy
+	var s types.AddStrategy
 	if err := utils.ParseBodyAndValidate(c, &s); err != nil {
-		fmt.Println(string(c.Body()))
-		fmt.Println(err)
 		return err
 	}
 
+	// find the userid
 	username := fmt.Sprint(c.Locals("username"))
-	s.UserName = username
-	if err := dal.CreateStrategy(&s).Error; err != nil {
+	user := &dal.User{Name: username}
+	if err := dal.FindUserByName(user, username).Error; err != nil {
 		utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
 		return nil
 	}
 
-	result := dal.FindStrategyByID(s, s.ID)
+	sNew := &dal.Strategy{
+		AllowCounter: s.AllowCounter,
+		Entries:      s.Entries,
+		TPs:          s.TPs,
+		SL:           s.SL,
+		UserID:       user.ID,
+	}
+
+	if err := dal.CreateStrategy(sNew).Error; err != nil {
+		utils.NewHTTPError(c, fiber.StatusInternalServerError, err)
+		return nil
+	}
+
+	result := dal.FindStrategyByID(sNew, sNew.ID)
 	if result.Error != nil {
 		utils.NewHTTPError(c, fiber.StatusInternalServerError, result.Error)
 		return nil
@@ -235,4 +291,20 @@ func CreateStrategy(c *fiber.Ctx) error {
 		strategy.TPs = append(strategy.TPs, tps)
 	}
 	return c.JSON(strategy)
+}
+
+// @Summary Delete a strategy
+// @Description Delete a strategy
+// @Security BasicAuth
+// @Tags strategies
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} string
+// @Failure 400 {object} utils.HTTPError
+// @Failure 401 {string} string
+// @Failure 404 {object} utils.HTTPError
+// @Failure 409 {object} utils.HTTPError
+// @Router /strategies [delete]
+func DeleteStrategy(c *fiber.Ctx) error {
+	return c.Status(400).SendString("not yet implemented")
 }
