# docs/swagger.json
@@ -84,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.AddUser"
+                            "$ref": "#/definitions/types.AddStrategy"
                         }
                     }
                 ],
@@ -92,7 +92,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.AddStrategy"
+                            "$ref": "#/definitions/types.Strategy"
                         }
                     },
                     "400": {
@@ -133,6 +133,55 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Change the current users setting. The request body must contain either a new name or a new password. If both, the username and the password get changed.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Change the current users setting",
+                "parameters": [
+                    {
+                        "description": "Userupdate",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.AddUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
                         }
                     },
                     "401": {
@@ -222,12 +271,60 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "dal.Entry": {
+            "type": "object",
+            "required": [
+                "diff"
+            ],
+            "properties": {
+                "diff": {
+                    "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dal.SL": {
+            "type": "object",
+            "required": [
+                "diff"
+            ],
+            "properties": {
+                "diff": {
+                    "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dal.TP": {
+            "type": "object",
+            "required": [
+                "diff"
+            ],
+            "properties": {
+                "diff": {
+                    "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.AddStrategy": {
             "type": "object",
             "properties": {
@@ -237,16 +334,16 @@
                 "entires": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/types.Entry"
+                        "$ref": "#/definitions/dal.Entry"
                     }
                 },
                 "sl": {
-                    "$ref": "#/definitions/types.SL"
+                    "$ref": "#/definitions/dal.SL"
                 },
                 "tps": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/types.TP"
+                        "$ref": "#/definitions/dal.TP"
                     }
                 }
             }
